--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.8.5",
@@ -25,11 +26,16 @@
     "styled-components": "5.3.5"
   },
   "devDependencies": {
+    "@babel/preset-env": "7.19.1",
+    "@babel/preset-react": "7.18.6",
     "@types/node": "18.7.13",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "babel-jest": "29.0.3",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
+    "jest": "29.0.3",
+    "react-test-renderer": "18.2.0",
     "typescript": "4.8.2"
   }
 }
